--- a/src/Pages/Shared/Navber/NavBer.css
+++ b/src/Pages/Shared/Navber/NavBer.css
@@ -4,3 +4,9 @@ ul a.active{
     border-radius: 10px;
     color: white;
 }
+
+.item{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
